[gd_scene load_steps=5 format=3 uid="uid://dlh1xcl7vllcn"]

[ext_resource type="Script" uid="uid://fk6orjba1btv" path="res://Scripts/missile.gd" id="1_0uoyr"]
[ext_resource type="PackedScene" uid="uid://drdff4a1ofsrc" path="res://scenes/explosion.tscn" id="2_bqn2q"]
[ext_resource type="Texture2D" uid="uid://b5vcsm22jw5gt" path="res://assets/missil.png" id="3_35udt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0uoyr"]
radius = 6.08276

[node name="Missile" type="CharacterBody2D"]
script = ExtResource("1_0uoyr")
explosion_scene = ExtResource("2_bqn2q")

[node name="MissileHurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MissileHurtbox"]
shape = SubResource("CircleShape2D_0uoyr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 1)
scale = Vector2(0.560781, 0.381563)
texture = ExtResource("3_35udt")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="MissileHurtbox" to="." method="_on_missile_hurtbox_area_entered"]
[connection signal="body_entered" from="MissileHurtbox" to="." method="_on_missile_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
